--- a/package.json
+++ b/package.json
@@ -95,7 +95,9 @@
     "lint:fix": "npm run lint -- --fix",
     "format": "prettier ./src --write",
     "test": "jest",
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "build": "webpack --mode=production",
+    "build:dev": "webpack --mode=development"
   },
   "eslintConfig": {
     "extends": [
