--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@typescript-eslint/parser": "^6.15.0",
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
+    "copy-webpack-plugin": "^13.0.0",
     "css-loader": "^6.8.1",
     "cypress": "^13.17.0",
     "dotenv-webpack": "^8.0.1",
@@ -70,6 +71,7 @@
     "eslint-plugin-storybook": "^0.6.15",
     "eslint-webpack-plugin": "^4.0.1",
     "fetch-mock": "^9.11.0",
+    "gh-pages": "^6.3.0",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
     "jest-css-modules-transform": "^4.4.2",
@@ -97,7 +99,8 @@
     "test": "jest",
     "cypress:open": "cypress open",
     "build": "webpack --mode=production",
-    "build:dev": "webpack --mode=development"
+    "build:dev": "webpack --mode=development",
+    "deploy": "gh-pages -d dist"
   },
   "eslintConfig": {
     "extends": [
